--- a/unityproj/Assets/tscode/tsconfig.json
+++ b/unityproj/Assets/tscode/tsconfig.json
@@ -1,8 +1,7 @@
 {
-    "compilerOptions": {
-        "module": "system"
-    },
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "module": "system",
+    "out": "../.html/game.js",
+    "sourceMap": true
+  }
 }
