--- a/unityproj/tstest.csproj
+++ b/unityproj/tstest.csproj
@@ -41,8 +41,166 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\webunity\3rd\jint\DeclarationBindingType.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Engine.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\EvalCodeScope.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Argument\ArgumentsInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Array\ArrayConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Array\ArrayInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Array\ArrayPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Boolean\BooleanConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Boolean\BooleanInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Boolean\BooleanPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Date\DateConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Date\DateInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Date\DatePrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Error\ErrorConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Error\ErrorInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Error\ErrorPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\BindFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\EvalFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\FunctionConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\FunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\FunctionPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\FunctionShim.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\ScriptFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Function\ThrowTypeError.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Global\GlobalObject.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\ICallable.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\IConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\IPrimitiveInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Json\JsonInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Json\JsonParser.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Json\JsonSerializer.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\JsValue.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Math\MathInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Null.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\CachePowers.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\DiyFp.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\DoubleHelper.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\FastDtoa.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\FastDtoaBuilder.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\Dtoa\NumberExtensions.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\NumberConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\NumberInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Number\NumberPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Object\ObjectConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Object\ObjectInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Object\ObjectPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\RegExp\RegExpConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\RegExp\RegExpInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\RegExp\RegExpPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\String\StringConstructor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\String\StringInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\String\StringPrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Native\Undefined.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Options.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ArrayExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\AssignmentExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\BinaryExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\BlockStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\BreakStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\CallExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\CatchClause.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ConditionalExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ContinueStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\DebuggerStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\DoWhileStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\EmptyStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Expression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ExpressionStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ForInStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ForStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\FunctionDeclaration.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\FunctionExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Identifier.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\IfStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\IPropertyKeyExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\LabeledStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Literal.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\LogicalExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\MemberExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\NewExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ObjectExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Program.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Property.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\RegExpLiteral.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ReturnStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\SequenceExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\Statement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\SwitchCase.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\SwitchStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\SyntaxNode.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\SyntaxNodes.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ThisExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\ThrowStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\TryStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\UnaryExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\UpdateExpression.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\VariableDeclaration.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\VariableDeclarator.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\WhileStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Ast\WithStatement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Comment.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\IFunctionDeclaration.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\IFunctionScope.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\IVariableScope.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\JavascriptParser.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Loc.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Messages.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\ParserException.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\ParserExtensions.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\ParserOptions.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Position.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\State.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Parser\Token.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Arguments.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\CallStack\CallStackElement.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\CallStack\CallStackElementComparer.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\CallStack\JintCallStack.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Completion.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Debugger\BreakPoint.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Debugger\DebugHandler.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Debugger\DebugInformation.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Debugger\StepMode.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Descriptors\PropertyDescriptor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Descriptors\Specialized\ClrAccessDescriptor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Descriptors\Specialized\FieldInfoDescriptor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Descriptors\Specialized\IndexDescriptor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Descriptors\Specialized\PropertyInfoDescriptor.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\Binding.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\DeclarativeEnvironmentRecord.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\EnvironmentRecord.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\ExecutionContext.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\LexicalEnvironment.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Environments\ObjectEnvironmentRecord.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\ExpressionIntepreter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\ClrFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\DefaultTypeConverter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\DelegateWrapper.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\GetterFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\IObjectConverter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\IObjectWrapper.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\ITypeConverter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\MethodInfoFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\NamespaceReference.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\ObjectWrapper.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\SetterFunctionInstance.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\TypeReference.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\Interop\TypeReferencePrototype.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\JavaScriptException.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\MruPropertyCache.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\MruPropertyCache2.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\RecursionDepthOverflowException.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\References\Reference.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\StatementInterpreter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\StatementsCountOverflowException.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\Runtime\TypeConverter.cs" />
+    <Compile Include="Assets\webunity\3rd\jint\StrictModeScope.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
