--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ unityproj/Assembly-CSharp-Editor.csproj
 unityproj/Assembly-CSharp-firstpass.csproj
 unityproj/Assembly-CSharp.csproj
 unityproj/unityproj.sln
+unityproj/.vs/unityproj/v14/.suo
