--- a/toolproj/recallunity/recallunity.csproj
+++ b/toolproj/recallunity/recallunity.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="exportattr\exportattr.cs" />
     <Compile Include="ILParser\ILParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
