--- a/toolproj/recallunity/recallunity.csproj
+++ b/toolproj/recallunity/recallunity.csproj
@@ -62,6 +62,7 @@
     <Compile Include="exportattr\exportattr.cs" />
     <Compile Include="ILParser\csLoader.cs" />
     <Compile Include="ILParser\ILParser.cs" />
+    <Compile Include="ILParser\Info.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
